# IAM

./: .gitignore  Cargo.toml  LICENSE  README.md  build-linux.sh  build-windows.bat
installer/linux/: create-deb.sh  iam-business.desktop
installer/windows/: setup.iss
src/: app.rs  main.rs  models.rs  storage.rs  theme.rs  ui_helpers.rs  utils.rs
src/app/: mod.rs  update.rs
src/ui/: contrats.rs  disponibilite.rs  maintenance.rs  mod.rs  modals.rs  nouveau_contrat.rs  sidebar.rs  tableau.rs  ventes.rs  voitures.rs
