[package]
name        = "iam-business"
version     = "1.0.0"
edition     = "2021"
description = "IAM Business – Car Rental Manager"
authors     = ["IAM Business"]

[[bin]]
name = "iam-business"
path = "src/main.rs"

[dependencies]
eframe  = "0.29.1"
csv     = "1.3"
serde   = { version = "1.0", features = ["derive"] }
chrono  = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "z"    # smallest binary
lto       = true
strip     = true
codegen-units = 1

# cargo-bundle metadata (used for .deb / .app packaging)
[package.metadata.bundle]
name       = "IAM Business"
identifier = "com.iambusiness.rental"
version    = "1.0.0"
copyright  = "IAM Business"
category   = "Business"
short_description = "Car rental management application"
long_description  = "Complete car rental management: fleet tracking, availability search, contracts, and dashboard."
