[package]
name        = "iam-business"
version     = "1.0.0"
edition     = "2021"
description = "IAM Business – Car Rental Manager"

[[bin]]
name = "iam-business"
path = "src/main.rs"

[dependencies]
eframe  = "0.29.1"
csv     = "1.3"
serde   = { version = "1.0", features = ["derive"] }
chrono  = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level     = "z"
lto           = true
strip         = true
codegen-units = 1
